Enhance review content and SEO features in Snarkflix
- Added a description section to the categories for improved user guidance.
- Updated review summary to "Key Takeaways" with a TL;DR format for better clarity.
- Introduced a "Movie Details" section displaying release year, category, and SnarkAI score.
- Enhanced related reviews loading logic to prioritize same-category reviews and added a category links section for better navigation.
- Implemented optimized meta description generation for improved SEO, ensuring descriptions are under 160 characters and keyword-rich.

--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@
     <section id="categories" class="snarkflix-categories" role="navigation" aria-label="Browse reviews by category">
         <div class="snarkflix-container">
             <h2 class="snarkflix-section-title">Browse by Category</h2>
+            <p class="snarkflix-section-description">Explore our movie reviews organized by genre. From action-packed blockbusters to thought-provoking dramas, find your next watch.</p>
             <div class="snarkflix-categories-grid">
                 <button type="button" class="snarkflix-category-card" data-category="action" aria-label="Browse Action category reviews, 13 posts available">
                     <div class="snarkflix-category-image action-category">
