Optimize resource loading and initialization in Snarkflix
- Enhanced HTML to preload critical resources and added preconnect links for improved performance.
- Deferred Google Analytics script loading until after page load for better user experience.
- Updated JavaScript to prioritize critical functionality initialization and defer non-essential setups using requestIdleCallback for improved responsiveness.

--- a/index.html
+++ b/index.html
@@ -50,10 +50,14 @@
     <!-- Preload only critical above-the-fold resources -->
     <link rel="preload" href="/images/site-assets/logo.webp" as="image" fetchpriority="high">
     <link rel="preload" href="/styles.css" as="style">
-    <!-- Preload critical font weights -->
+    <!-- Preload critical font weights - only regular weight for initial render -->
     <link rel="preload" href="https://fonts.gstatic.com/s/inter/v13/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuLyfAZ9hiJ-Ek-_EeA.woff2" as="font" type="font/woff2" crossorigin>
     <!-- Defer background image loading -->
     <link rel="prefetch" href="/images/site-assets/background.avif" as="image">
+    <!-- Preconnect to external domains -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="dns-prefetch" href="https://www.googletagmanager.com">
     <!-- reviews-data.js preload removed - it's loaded with defer and may not be needed on review pages -->
 
     <title>Snarkflix - Snarky Movie Reviews</title>
@@ -62,8 +66,6 @@
     <div id="a11y-live-region" class="sr-only" aria-live="polite" aria-atomic="true"></div>
     <div id="a11y-status-region" class="sr-only" aria-live="status" aria-atomic="true"></div>
     <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- Load fonts asynchronously to prevent render blocking -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'; this.onload=null;">
     <noscript><link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet"></noscript>
@@ -92,14 +94,20 @@
     }
     </script>
     
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8SV8W7XL64"></script>
+    <!-- Google tag (gtag.js) - Load after page load for better performance -->
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-8SV8W7XL64');
+      // Defer Google Analytics loading until after page load
+      window.addEventListener('load', function() {
+        var script = document.createElement('script');
+        script.async = true;
+        script.src = 'https://www.googletagmanager.com/gtag/js?id=G-8SV8W7XL64';
+        document.head.appendChild(script);
+        
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-8SV8W7XL64');
+      });
     </script>
 </head>
 <body>
