Optimize review loading and initialization strategy in Snarkflix
- Implemented a more aggressive deferral strategy for script execution to enhance page load performance.
- Increased timeout values for requestIdleCallback and setTimeout to improve responsiveness during initialization.
- Updated the loadReviews function to resolve immediately after DOM updates, streamlining the review loading process.
- Added comments for clarity on performance optimizations and initialization flow.

--- a/index.html
+++ b/index.html
@@ -402,6 +402,7 @@
         </div>
     </footer>
 
+    <!-- Load reviews data first, then script -->
     <script src="reviews-data.js?v=2025-10-07-2202" defer></script>
     <script src="script.js?v=2025-10-07-2202" defer></script>
     
