--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     
     <!-- Accessibility: Live region for dynamic content announcements -->
     <div id="a11y-live-region" class="sr-only" aria-live="polite" aria-atomic="true"></div>
-    <div id="a11y-status-region" class="sr-only" aria-live="status" aria-atomic="true"></div>
+    <div id="a11y-status-region" class="sr-only" aria-live="polite" aria-atomic="true"></div>
     <link rel="stylesheet" href="styles.css">
     <!-- Load fonts asynchronously to prevent render blocking -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'; this.onload=null;">
